# Mash-Up-Backend

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  secrets.py
.github/workflows/: ci.yml  main.yml
.requirements/: base.txt  dev.txt  production.txt
app/: manage.py
app/config/: apis.py  doc.py  jinja2.py  storages.py  urls.py  views.py
app/config/settings/: base.py  ci.py  dev.py  local.py  production.py
app/config/tests/: test_doc.py
app/config/urls/: __init__.py  push.py
app/config/wsgi/: __init__.py  base.py
app/events/: urls.py
app/events/lol/: admin.py  models.py  urls.py  views.py
app/members/: apis.py  apps.py  backends.py  filters.py  forms.py  middleware.py  models.py  serializers.py  urls.py  views.py
app/members/admin/: __init__.py  team_period.py  user.py
app/members/migrations/: 0001_initial.py  0002_create_initial.py  0003_auto_20190813_0341.py  0004_auto_20190813_0407.py  0005_auto_20190826_1427.py  0006_auto_20190826_1538.py  0007_auto_20190826_1548.py  0008_auto_20190826_1848.py  0009_auto_20190826_1902.py  0010_auto_20190914_0021.py  0011_user_birth_date.py  0012_auto_20200131_2257.py  0013_emailvalidation.py  0014_auto_20200201_1638.py  0015_auto_20200223_1726.py  0016_auto_20200323_1400.py
app/members/tests/: test_admin.py  test_apis.py  test_backends.py  test_models.py
app/notice/: __init__.py  admin.py  apis.py  apps.py  exceptions.py  filters.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py
app/notice/migrations/: 0001_initial.py  0002_notice_user_set.py  0003_auto_20190923_1813.py  0004_notice_type.py  0005_auto_20191217_2131.py  0006_auto_20191218_1239.py  0007_auto_20200131_2233.py  0008_auto_20200322_1902.py  0009_auto_20200322_2020.py  0010_auto_20200322_2104.py  0011_auto_20200322_2129.py  0012_auto_20200323_1223.py  0013_auto_20200323_1404.py  0014_auto_20200415_1033.py
app/notice/serializers/: __init__.py  attendance.py  notice.py
app/notice/tests/: test_admin.py  test_attendance.py  test_notice.py
app/static/css/: redoc.css  redoc.css.map  redoc.scss
app/static/js/: push.js
app/study/: apps.py  models.py
app/study/admin/: __init__.py  study.py  study_meeting.py
app/study/migrations/: 0001_initial.py  0002_auto_20191218_1239.py
app/templates/: base.html  index.html
app/templates/jinja2/: base.jinja2
app/utils/drf/: doc.py  (+6 more)
(+23 files in other folders)
